--- a/Lab3_Threading/Threading/Threading.vcxproj.filters
+++ b/Lab3_Threading/Threading/Threading.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Thread.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Functions.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Thread.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Functions.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
